// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - EmailSerializer should align heading correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <h1
    style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
  >
    Plain Heading
  </h1>
  <div
    style="width: 100%;text-align: center;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with center alignment
    </h1>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with end alignment
    </h1>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should align paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    border-spacing="0px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
        >
          Plain Paragraph
        </td>
      </tr>
    </tbody>
  </table>
  <div
    style="width: 100%;text-align: center;"
  >
    <table
      border-spacing="0px"
      margin="0"
      padding="0"
      width="100%"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
          >
            Paragraph with center alignment
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <table
      border-spacing="0px"
      margin="0"
      padding="0"
      width="100%"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
          >
            Paragraph with end alignment
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should inline code properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <code
    style="background: rgb(244, 245, 247);color: rgb(23, 43, 77);border-radius: 3px;padding: 2px 4px;font-size: 12px;line-height: 24px;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
  >
    const foo = bar();
  </code>
</div>
`;

exports[`Renderer - EmailSerializer should inline text properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    border-spacing="0px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
        >
          foo
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render block cards correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    blockCard with url
  </h3>
  <a
    href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
    style="border: none;background: transparent;color: #000000;text-decoration: none;"
  >
    <table
      style="width: 400px;min-width: 200px;max-width: 400px;border-spacing: 0px;"
    >
      <tbody>
        <tr>
          <td
            style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 2px 5px 5px 5px;margin: 0px;color: #000000;background-color: #F4F5F7;font-size: 12px;"
          >
            <div
              style="width: 400px;min-width: 200px;max-width: 400px;overflow: hidden;color: #000000;font-size: 14px;font-weight: 500;text-overflow: ellipsis;white-space: nowrap;text-decoration: none;"
            >
              <font
                color="#000000"
                style="border: none;background: transparent;color: #000000;text-decoration: none;"
              >
                https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424
              </font>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </a>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    blockCard with data
  </h3>
  <a
    href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
    style="border: none;background: transparent;color: #000000;text-decoration: none;"
  >
    <table
      style="width: 400px;min-width: 200px;max-width: 400px;border-spacing: 0px;"
    >
      <tbody>
        <tr>
          <td
            style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 2px 5px 5px 5px;margin: 0px;color: #000000;background-color: #F4F5F7;font-size: 12px;"
          >
            <table
              style="width: 400px;min-width: 200px;max-width: 400px;border-spacing: 0px;"
            >
              <tbody>
                <tr>
                  <td
                    style="color: #5E6C84;font-size: 12px;line-height: 24px;"
                  >
                    Confluence
                  </td>
                </tr>
                <tr>
                  <td
                    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 6px 12px 12px 12px;background: #FFFFFF;font-size: 12px;line-height: 18px;border: #ebedf0 solid 1px;"
                  >
                    <div
                      style="font-size: 16px;line-height: 24px;font-weight: 500;"
                    >
                      Founder Update 76: Hello, Trello!
                    </div>
                    <div
                      style="padding: 7px 0 0 0;color: #000000;"
                    >
                      Today is a big day for Atlassian – we have entered into an agreement to buy Trello. (boom)
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render codeblock correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;"
  >
    <table
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 16px;background-color: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;font-size: 12px;line-height: 20px;color: rgb(23, 43, 77);"
          >
            <code
              style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
            >
              // Create a map.
final IntIntOpenHashMap map = new IntIntOpenHashMap();
map.put(1, 2);
map.put(2, 5);
map.put(3, 10);
int count = map.forEach(new IntIntProcedure()
{
   int count;
   public void apply(int key, int value)
   {
       if (value &gt;= 5) count++;
   }
}).count;
System.out.println("There are " + count + " values &gt;= 5");
            </code>
          </td>
        </tr>
      </tbody>
    </table>
  </pre>
</div>
`;

exports[`Renderer - EmailSerializer should render inline cards correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    inlineCard with url
  </h3>
  <table
    border-spacing="0px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
        >
          Lorem ipsum
          <a
            href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
            style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
          >
            <font
              color="#0052CC"
              style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
            >
              <span
                style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 0px 0px 2px 0px;background-color: #e9eaee;line-height: 24px;"
              >
                 https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424 
              </span>
            </font>
          </a>
          dolor sit amet
        </td>
      </tr>
    </tbody>
  </table>
  <h3
    style=",
  font-size: 1.4285714285714286em;
  font-style: inherit;
  line-height: 1.2;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 500;
  letter-spacing: -0.008em;
  margin-top: ,28,px;"
  >
    inlineCard with data
  </h3>
  <table
    border-spacing="0px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
        >
          Lorem ipsum
          <a
            href="https://extranet.atlassian.com/pages/viewpage.action?pageId=3088533424"
            style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
          >
            <font
              color="#0052CC"
              style="color: #0052CC;border: none;background: transparent;text-decoration: none;"
            >
              <span
                style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;padding: 0px 0px 2px 0px;background-color: #e9eaee;line-height: 24px;"
              >
                 Founder Update 76: Hello, Trello! 
              </span>
            </font>
          </a>
          dolor sit amet
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render link 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <a
    href="https://www.atlassian.com"
    style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
  >
    Hello, world!
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render panels correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #DEEBFF;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is an info panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #EAE6FF;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is a note panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #E3FCEF;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is a tip panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #E3FCEF;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is a success panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #FFFAE6;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is a warning panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    border-spacing="0px"
    font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
    font-size="14"
    font-weight="400"
    line-height="24px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 4px 12px 4px 0;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
        >
          <table
            border-spacing="0px"
            font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif"
            font-size="14"
            font-weight="400"
            line-height="24px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 2px 0px 2px 8px;margin: 0px;background: #FFEBE6;"
                >
                  <table
                    border-spacing="0px"
                    margin="0"
                    padding="0"
                    width="100%"
                  >
                    <tbody>
                      <tr>
                        <td
                          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                        >
                          This is a error panel with 
                          <span
                            style="font-weight: bold;"
                          >
                            bold text
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render paragraph with indentations 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 30px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 1 level of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 60px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 2 levels of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 90px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 3 levels of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 120px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 4 levels of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 150px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 5 levels of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 180px;"
        >
          <table
            border-spacing="0px"
            margin="0"
            padding="0"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
                >
                  Paragraph with 6 levels of indentation
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render text with em inside of a paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    border-spacing="0px"
    margin="0"
    padding="0"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 8px 8px 8px 0;-moz-border-radius: 3px;font-size: 14px;width: 100%;margin: 0px;"
        >
          <a
            href="https://www.atlassian.com"
            style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
          >
            Hello, 
          </a>
          <span
            style="font-weight: bold;"
          >
            <a
              href="https://www.atlassian.com"
              style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
            >
              World!
            </a>
          </span>
           Look I can do 
          <span
            style="font-style: italic;"
          >
            italic 
          </span>
          <span
            style="font-weight: bold;"
          >
            <span
              style="font-style: italic;"
            >
              , strong 
            </span>
          </span>
          <span
            style="text-decoration: underline;"
          >
            <span
              style="font-weight: bold;"
            >
              <span
                style="font-style: italic;"
              >
                and underlined text!
              </span>
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
